fix: copiar config.php en Dockerfiles

--- a/app3/Dockerfile
+++ b/app3/Dockerfile
@@ -23,7 +23,8 @@ RUN rm -rf /var/www/html/* && \
     cp -r dist/* /var/www/html/ && \
     cp -r api /var/www/html/ && \
     [ -d admin ] && cp -r admin /var/www/html/ || true && \
-    cp load-env.php /var/www/html/
+    cp load-env.php /var/www/html/ && \
+    cp config.php /var/www/html/
 
 WORKDIR /var/www/html
 
