--- a/app3/Dockerfile
+++ b/app3/Dockerfile
@@ -9,7 +9,7 @@ RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - && \
 RUN docker-php-ext-install mysqli pdo pdo_mysql
 
 # Habilitar mod_rewrite y configurar Apache
-RUN a2enmod rewrite && \
+RUN a2enmod rewrite headers && \
     sed -i 's/AllowOverride None/AllowOverride All/g' /etc/apache2/apache2.conf
 
 # Copiar código
