--- a/app3/Dockerfile
+++ b/app3/Dockerfile
@@ -24,7 +24,8 @@ RUN rm -rf /var/www/html/* && \
     cp -r dist/* /var/www/html/ && \
     cp -r api /var/www/html/ && \
     [ -d admin ] && cp -r admin /var/www/html/ || true && \
-
+    cp public/load-env.php /var/www/html/ && \
+    cp public/config.php /var/www/html/ && \
     chown -R www-data:www-data /var/www/html && \
     chmod -R 755 /var/www/html
 
