--- a/scripts/package.json
+++ b/scripts/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Script para convertir imágenes a WebP",
   "scripts": {
-    "convert": "node scripts/convert-to-webp.js"
+    "convert": "node convert-to-webp.js"
   },
   "dependencies": {
     "sharp": "^0.33.0",
