--- a/app3/package.json
+++ b/app3/package.json
@@ -17,6 +17,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.5.0",
+        "react-is": "^19.2.4",
         "recharts": "^3.1.2"
     },
     "devDependencies": {
